# drama-tracker

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  wsgi.py
app/: app.py  notion_create_db_helpers.py  notion_patch.py  notion_patch_helpers.py
drama_tracker/: app.py  get_main_actors_schema.py  get_title_details_schema.py  notion_patch_helpers.py
schemas/: get_main_actors_schema.txt  get_title_details_schema.txt  notion_page_schema.txt
tests/: test_app.py  test_notion_patch_helpers.py
