[tool.poetry]
name = "drama-tracker"
version = "0.1.0"
description = ""
authors = ["Elaine Liu <elaineliu7g@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.26.0"
gunicorn = "^20.1.0"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
